--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "clsx": "^1.1.1",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
     "react-router-dom": "6",
     "react-select": "^5.2.1",
+    "react-toastify": "^8.1.0",
+    "recoil": "^0.5.2",
     "sass": "^1.45.2"
   },
   "devDependencies": {
