--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-query": "^3.34.7",
     "react-router-dom": "6",
     "react-select": "^5.2.1",
